# blog

./: README.md
code/haskell-memory-usage-storable-vector/: .gitignore  LICENSE  README.md  haskell-memory-usage-storable-vector.cabal  shell.nix
code/haskell-memory-usage-storable-vector/bench/: Main.hs
posts/: Haskell-Storable-Vector-overhead.md  The-bracket-pattern-is-safer-than-RAII.md
