name:                haskell-memory-usage-storable-vector
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  README.md
  stack.yaml

benchmark weigh-benchmark
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs:
    bench
  main-is:
    Main.hs
  build-depends:
      base
    , vector
    , weigh
  ghc-options:
    -- No `-threaded`, as per `weigh` docs recommendation.
    -Wall -rtsopts
